--- a/backend/disease_prediction.ipynb
+++ b/backend/disease_prediction.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#download the required libraries\n",
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -461,7 +462,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
